# felix-ttt

./: CMakeLists.txt  README.md  banner.txt  main.c  main.h
docs/ftop/: README.md
docs/ftop/html/: index.html
engine/: mcts.c  mcts.h  random.c  random.h  tree.c  tree.h
game/: board.c  board.h  history.c  history.h  state.c  state.h
interface/: ascii.c  ascii.h  gui.c  gui.h  ttp.c  ttp.h
tgf/: tgf.c  tgf.h
utils/: binarysearch.c  binarysearch.h  mt19937.c  mt19937.h  zobrist.c  zobrist.h
